--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Adafruit-Blinka==8.62.0
 adafruit-circuitpython-bh1750==1.1.16
+adafruit-circuitpython-bme680==3.7.13
 adafruit-circuitpython-busdevice==5.2.13
 adafruit-circuitpython-connectionmanager==3.1.5
 adafruit-circuitpython-register==1.10.4
